# qemu

./: MAINTAINERS  gdbstub.c  meson.build  qemu-options.hx
accel/: meson.build
accel/kvm/: kvm-all.c
accel/qtest/: meson.build
accel/stubs/: kvm-stub.c
accel/tcg/: meson.build  tcg-accel-ops.c
audio/: meson.build
backends/: meson.build
block/: meson.build
bsd-user/freebsd/: os-syscall.c
chardev/: meson.build
configs/targets/: aarch64_be-linux-user.mak  armeb-linux-user.mak
docs/devel/: build-system.rst
dump/: meson.build
gdbstub/: gdbstub.c  internals.h  meson.build  softmmu.c  syscalls.c  user.c
hw/9pfs/: meson.build
hw/acpi/: meson.build
hw/block/: meson.build
hw/char/: meson.build
hw/core/: meson.build
hw/display/: meson.build
hw/gpio/: meson.build
hw/i2c/: meson.build
hw/intc/: meson.build
hw/mem/: meson.build
hw/misc/: meson.build
hw/net/: meson.build
hw/pci/: meson.build
hw/pci-bridge/: meson.build
hw/pci-host/: meson.build
hw/rdma/: meson.build
hw/remote/: meson.build
hw/rtc/: meson.build
hw/sensor/: meson.build
hw/ssi/: meson.build
hw/tpm/: meson.build
hw/usb/: meson.build
hw/virtio/: meson.build
hw/watchdog/: meson.build
hw/xen/: meson.build
include/exec/: gdbstub.h
include/semihosting/: console.h  softmmu-uaccess.h  uaccess.h
include/sysemu/: accel-ops.h  kvm.h
linux-user/: elfload.c  main.c
linux-user/aarch64/: cpu_loop.c
linux-user/arm/: cpu_loop.c
linux-user/riscv/: cpu_loop.c
migration/: meson.build
monitor/: meson.build
net/: meson.build
qapi/: meson.build
semihosting/: arm-compat-semi.c  config.c  syscalls.c  uaccess.c
softmmu/: cpus.c  meson.build  runstate.c  vl.c
stubs/: meson.build  semihost.c
tests/tcg/xtensa/: test_sr.S
ui/: meson.build
